quiz screen added

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,3 +43,10 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
+#quizContent {
+  transition: opacity 0.3s ease;
+}
+.opacity-0 {
+  opacity: 0;
+}
